# req-update

./: .coveragerc  .drone.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml
pip_update/: __init__.py  pip_update.py
pip_update/tests/: test_pip_update.py
req_update/: docker.py  dockercompose.py  drone.py  githubworkflow.py  gitsubmodule.py  go.py  node.py  python.py  req_update.py  util.py
req_update/tests/: test_cli.py  test_docker.py  test_dockercompose.py  test_drone.py  test_githubworkflow.py  test_gitmodules.py  test_gitsubmodule.py  test_go.py  test_node.py  test_python.py  test_req_update.py  test_util.py
