[project]
name = "req-update"
authors = [
    {name = "Albert Wang", email = "git@albertyw.com"},
]
description = "Update python, node, go, docker, and other dependencies"
requires-python = ">=3.9"
keywords = ["dependencies"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.6.7",        # Test coverage
    "ruff==0.7.4",            # Python linter

    # Types
    "mypy==1.13.0",           # Static typing
]

[project.urls]
"Homepage" = "https://github.com/albertyw/req-update"

[project.scripts]
req_update = "req_update.req_update:main"

[tool.setuptools.dynamic]
version = {attr = "req_update.req_update.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[options.package_data]
req_update = ["py.typed"]

[tool.ruff]
lint.select = ["E", "F", "W", "A", "B", "COM", "N", "PLC", "PLE", "PLW"]
lint.ignore = ["B010"]

[tool.mypy]
strict = true
exclude = [
    "build",
]

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
